# codefactory

./: .env  .gitignore  .tmux-codefactory.conf  AGENTS.md  BACKLOG.md  BEADS_SETUP.md  CLAUDE.md  Cargo.toml  README.md  manifest  start.sh
.beads/: config.yaml  metadata.json
.beads/backup/: backup_state.json
backend/: CLAUDE.md  Cargo.toml
backend/src/: config.rs  log_layer.rs  main.rs  state.rs  term_state.rs  terminal.rs  ws.rs
codefactory-tui/: Cargo.toml
codefactory-tui/src/: main.rs
docs/: termux-api-reference.md
frontend/: CLAUDE.md  index.html  manifest.json  service-worker.js
frontend/config/: floors.json
frontend/css/: file-picker.css  industrial-prose.css  style.css
frontend/js/: app.js  beads-board.js  console-forwarder.js  elevator-sounds.js  extra-keys.js  file-picker.js  floor-edit.js  git-graph.js  livereload.js  lobby.js  markdown-panel.js  mobile.js  panels.js  swipe-panels.js  terminal.js  termux-dashboard.js  text-view.js
frontend/pages/: beads-board.html  config.html  diff.html  files.html  git-tree.html  git.html  logs.html  markdown.html  notes.html  ports.html  processes.html  search.html  snippets.html  terminals.html  termux-dashboard.html
hooks/: README.md  state-tracker-termux.sh  state-tracker.sh
