[package]
name = "codefactory-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
futures = "0.3"
anyhow = "1"
arc-swap = "1"
tower = { version = "0.5.3", features = ["util"] }
chrono = { version = "0.4", features = ["serde"] }
